Added support for FontAwesome

--- a/index.html
+++ b/index.html
@@ -37,13 +37,20 @@
     <div class="container">
 
 	    <header>
-			<h1>Header</h1>
+			<h1 class="heading1">Header</h1>
+			<ul class="main-nav">
+				<li><a href="#" title="One">One</a></li>
+				<li><a href="#" title="Two">Two</a></li>
+				<li><a href="#" title="Three">Three</a></li>
+				<li><a href="#" title="Four">Four</a></li>
+				<li><a href="#" title="Five">Five</a></li>
+			</ul>
 		</header>
 		
 
 		<div role="main">
-			<p>Content</p>
 
+			<p>Content </p>
 
 			<div class="some-group-of-cols">
 				<div class="col">
@@ -75,6 +82,104 @@
 				</div>
 			</div>
 
+			<h2>Testing FontAwesome</h2>
+
+			<p>Here is an icon in the <i class="icon-github icon-large"></i> middle of a paragraph.</p>
+
+			<h2 class="heading2 has-icon-large"><i class="icon-github icon-large"></i> icon-large icon in a large H2</h2>
+
+			<h2 class="heading2 has-icon-2x"><i class="icon-github icon-2x"></i> icon-2x icon in a large H2</h2>
+
+			<h2 class="heading2 has-icon-3x"><i class="icon-github icon-3x"></i> icon-3x icon in a large H2</h2>
+
+			<div class="cause-wrap">
+
+				<div>
+
+					<p>h1</p>
+
+					<hr>
+
+					<h2 class="heading1 has-icon-large"><i class="icon-github icon-large"></i> icon-large icon in a large H1 and I'm about to wrap.</h2>
+
+					<h2 class="heading1 has-icon-2x"><i class="icon-github icon-2x"></i> icon-2x icon in a large H1 and I'm about to wrap.</h2>
+
+					<h2 class="heading1 has-icon-3x"><i class="icon-github icon-3x"></i> icon-3x icon in a large H1 and I'm about to wrap.</h2>
+
+					<h2 class="heading1 has-icon-4x"><i class="icon-github icon-4x"></i> icon-4x icon in a large H1 and I'm about to wrap.</h2>
+
+				</div>
+
+				<div>
+
+					<p>h2</p>
+
+					<hr>
+
+					<h2 class="heading2 has-icon-large"><i class="icon-github icon-large"></i> icon-large icon in a large H2 and I'm about to wrap.</h2>
+
+					<h2 class="heading2 has-icon-2x"><i class="icon-github icon-2x"></i> icon-2x icon in a large H2 and I'm about to wrap.</h2>
+
+					<h2 class="heading2 has-icon-3x"><i class="icon-github icon-3x"></i> icon-3x icon in a large H2 and I'm about to wrap.</h2>
+
+					<h2 class="heading2 has-icon-4x"><i class="icon-github icon-4x"></i> icon-4x icon in a large H2 and I'm about to wrap.</h2>
+
+				</div>
+
+			</div>
+
+			<div class="cause-wrap">
+
+				<div>
+
+					<p>h3</p>
+
+					<hr>
+
+					<h2 class="heading3 has-icon-large"><i class="icon-github icon-large"></i> icon-large icon in a large H3 and I'm about to wrap.</h2>
+
+					<h2 class="heading3 has-icon-2x"><i class="icon-github icon-2x"></i> icon-2x icon in a large H3 and I'm about to wrap.</h2>
+
+					<h2 class="heading3 has-icon-3x"><i class="icon-github icon-3x"></i> icon-3x icon in a large H3 and I'm about to wrap.</h2>
+
+					<h2 class="heading3 has-icon-4x"><i class="icon-github icon-4x"></i> icon-4x icon in a large H3 and I'm about to wrap.</h2>
+
+				</div>
+
+				<div>
+
+					<p>h4</p>
+
+					<hr>
+
+					<h2 class="heading4 has-icon-large"><i class="icon-github icon-large"></i> icon-large icon in a large H4 and I'm about to wrap.</h2>
+
+					<h2 class="heading4 has-icon-2x"><i class="icon-github icon-2x"></i> icon-2x icon in a large H4 and I'm about to wrap.</h2>
+
+					<h2 class="heading4 has-icon-3x"><i class="icon-github icon-3x"></i> icon-3x icon in a large H4 and I'm about to wrap.</h2>
+
+					<h2 class="heading4 has-icon-4x"><i class="icon-github icon-4x"></i> icon-4x icon in a large H4 and I'm about to wrap.</h2>
+
+				</div>
+
+			</div>
+
+			<hr>
+
+			<p><i class="icon-camera-retro icon-large"></i> icon-camera-retro</p>
+			<p><i class="icon-camera-retro icon-2x"></i> icon-camera-retro</p>
+			<p><i class="icon-camera-retro icon-3x"></i> icon-camera-retro</p>
+			<p><i class="icon-camera-retro icon-4x"></i> icon-camera-retro</p>
+
+			<ul class="bullets-test">
+				<li><i class="icon-plus"></i> Oh hey, a thing.</li>
+				<li><i class="icon-plus"></i> Oh hey look, a thing.</li>
+				<li><i class="icon-plus"></i> Oh hey, another thing.</li>
+				<li><i class="icon-plus"></i> Oh hey, a fourth thing.</li>
+				<li><i class="icon-plus"></i> A second to last thing.</li>
+				<li><i class="icon-plus"></i> This is the last thing.</li>
+			</ul>
+
 		</div>
 		
 
@@ -103,6 +208,6 @@
 	</script>
 
 	<!-- Live Reload Script -->
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	<!--<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>-->
 </body>
 </html>
