Establish view-full-site link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 			<p>Content </p>
 
+			<p><a class="view-full-site" href="#" title="View Full Site">View Full Site</a> <a class="view-mobile-site" href="#" title="View Mobile Site">View Mobile Site</a></p>
+
 			<div class="some-group-of-cols">
 				<div class="col">
 					<p>col1</p>
