Make inputs larger for touch devices.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
 				<li><i class="icon-plus"></i> This is the last thing.</li>
 			</ul>
 
+			<hr>
+
+			<h2 class="heading2">Forms Test:</h2>
+
+			<form>
+				<label for="test-input">This is a test input:</label>
+				<input type="text" placeholder="test" name="test-input" id="test-input">
+			</form>
+
 		</div>
 		
 
